--- a/index1.html
+++ b/index1.html
@@ -85,6 +85,7 @@
             placeholder="Searching ..." 
           />
           <div class="row1"></div>
+          <div class="pagination"></div>
           <div class="loader-container"></div>
         </div>
       </section>
