--- a/index.html
+++ b/index.html
@@ -120,5 +120,6 @@
       </div>
     </footer>
     <script src="./js/script.js"></script>
+    <script src="./js/script1.js"></script>
   </body>
 </html>
